--- a/grid.html
+++ b/grid.html
@@ -12,7 +12,7 @@
     <main class="main">
       <article>Article 1</article>
       <article>Article 2</article>
-      <article>Article 3</article>
+      <article>Articles 3</article>
       <article>Article 4</article>
       <article>Article 5</article>
       <article>Article 6</article>
